syntax = "proto3";

option csharp_namespace = "server.api.gRPC";

package truck;

import "google/api/annotations.proto";

service Truck {
	rpc GetTrucks (GetTruckRequest) returns (GetTruckReply){
		option (google.api.http) = {
			get: "/api/admin/truck"
		};
	}

	rpc AddTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			post: "/api/admin/truck"	
		};
	}

	rpc UpdateTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			put: "/api/admin/truck"	
		};
	}

	rpc EditTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			patch: "/api/admin/truck"	
		};
	}

	rpc RemoveTruck (TruckMessage) returns (TruckMessage){
		option (google.api.http) = {
			put: "/api/admin/truck"	
		};
	}
}

message GetTruckRequest {
	oneof oneOfGetTruckRequest {
		string storeId = 1;
		string id = 2;
	}
	Pagination p = 3;
}

message GetTruckReply {
	repeated TruckMessage trucks = 1;
	int32 count = 2;
}

message Pagination {
	int32 offset = 1;
	int32 limit = 2;
}

message TruckMessage {
	string id = 1;
	string storeId = 2;
	int32 capacity = 3;
}

